hotfix: update nginx configuration to support additional image formats and improve caching headers

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,14 +40,12 @@ http {
         application/xml
         text/javascript
         image/svg+xml;
-
-    location ~* \.(jpg|jpeg)$ {
-        root /;  # Root directory
-        try_files $uri =404;
-        access_log off;
-        expires 30d;
-        add_header Cache-Control "public";
-    }
+        image/x-icon;
+        image/jpeg;
+        image/png;
+        image/gif;
+        image/webp;
+        image/jpg;
 
     upstream quality-lab-pro {
         least_conn;
@@ -88,6 +86,13 @@ http {
        add_header X-XSS-Protection "1; mode=block";
        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
+       location ~* \.(jpg|jpeg|png|gif|webp)$ {
+            add_header Access-Control-Allow-Origin *;
+            expires 30d;
+            add_header Cache-Control "public, no-transform";
+            try_files $uri $uri/ =404;
+        }
+
        location /backend-api/ {
            proxy_pass http://quality-lab-pro/;
            proxy_http_version 1.1;
@@ -120,5 +125,8 @@ http {
         text/css                   1d;
         application/javascript     1d;
         ~image/                    7d;
+        ~image/webp                7d;
+        ~image/jpg                 7d;
+        ~image/jpeg                7d;
     }
 }
