refactor: update backend deploy branch to 'dev' and clean up nginx configuration

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,11 +39,11 @@ http {
         text/xml
         application/xml
         text/javascript
-        image/svg+xml;
-        image/jpeg;
-        image/png;
-        image/gif;
-        image/webp;
+        image/svg+xml
+        image/jpeg
+        image/png
+        image/gif
+        image/webp
         image/jpg;
 
     upstream quality-lab-pro {
