--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 user nginx;
-worker_processes 2;  
+worker_processes 1  
 worker_rlimit_nofile 20480; 
 
 events {
@@ -86,12 +86,6 @@ http {
        add_header X-XSS-Protection "1; mode=block";
        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-       location ~* \.(jpg|jpeg|png|gif|webp)$ {
-            add_header Access-Control-Allow-Origin *;
-            expires 30d;
-            add_header Cache-Control "public, no-transform";
-            try_files $uri $uri/ =404;
-        }
 
        location /backend-api/ {
            proxy_pass http://quality-lab-pro/;
