refactor: update application properties and optimize analytic services

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,6 +3,10 @@
 # ===============================
 server.port=8080
 server.error.include-stacktrace=never
+server.tomcat.accept-count=3
+server.tomcat.max-connections=3
+server.tomcat.max-threads=3
+server.tomcat.threads.min-spare=1
 
 # ===============================
 # = LOGGING CONFIGURATION
@@ -18,6 +22,7 @@ management.endpoint.health.show-details=always
 # ===============================
 # = DATABASE CONFIGURATION
 # ===============================
+spring.main.lazy-initialization=true
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=root
