--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,8 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
+    limit_req_zone $binary_remote_addr zone=my_limit:10m rate=10r/s;
+
     
     keepalive_timeout 30;
     keepalive_requests 50;
@@ -30,7 +32,7 @@ http {
     gzip on;
     gzip_vary on;
     gzip_proxied any;
-    gzip_comp_level 5;  
+    gzip_comp_level 6;  
     gzip_min_length 512;  
     gzip_types 
         text/plain
@@ -85,9 +87,21 @@ http {
        add_header X-Frame-Options DENY;
        add_header X-XSS-Protection "1; mode=block";
        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+       
+            # Next.js API routes
+        location /next-api/ {
+            proxy_pass http://quality-lab-pro-frontend/api/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            client_max_body_size 100m;
+            client_body_timeout 300s;
+            limit_req zone=my_limit burst=5 nodelay;
+        }
 
-
-       location /backend-api/ {
+       location / {
            proxy_pass http://quality-lab-pro/;
            proxy_http_version 1.1;
            proxy_set_header Connection "";
@@ -98,6 +112,8 @@ http {
 
            client_max_body_size 100m;
            client_body_timeout 300s;
+           limit_req zone=my_limit burst=5 nodelay;
+
        }
 
        location / {
@@ -109,7 +125,9 @@ http {
            proxy_set_header X-Forwarded-Proto $scheme;
            client_max_body_size 100m;
            client_body_timeout 300s;
+           limit_req zone=my_limit burst=5 nodelay;
 
+ 
            proxy_no_cache 1;
            proxy_cache_bypass 1;
        }
