--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@
 # ===============================
 server.port=${SERVER_LOCAL_PORT:8080}
 server.error.include-stacktrace=never
+server.servlet.context-path=/v1
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
-spring.output.ansi.enabled=ALWAYS
+spring.output.ansi.enabled=detect
 spring.threads.virtual.enabled=true
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=500, expireAfterWrite=5m
