--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -88,20 +88,9 @@ http {
        add_header X-XSS-Protection "1; mode=block";
        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
        
-            # Next.js API routes
-        location /next-api/ {
-            proxy_pass http://quality-lab-pro-frontend/api/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            client_max_body_size 100m;
-            client_body_timeout 300s;
-            limit_req zone=my_limit burst=5 nodelay;
-        }
 
-       location / {
+
+       location /backend {
            proxy_pass http://quality-lab-pro/;
            proxy_http_version 1.1;
            proxy_set_header Connection "";
