--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -90,7 +90,7 @@ http {
        
 
 
-       location /backend {
+       location /backend/ {
            proxy_pass http://quality-lab-pro/;
            proxy_http_version 1.1;
            proxy_set_header Connection "";
