--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -2,7 +2,7 @@ name: Backend Deploy Pipeline
 
 on:
   push:
-    branches: [ 'master' ]
+    branches: [ 'main' ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
