--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -17,13 +17,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
         
       - name: Ensure buildx cache
         run: mkdir -p /tmp/.buildx-cache
         
       - name: Cache Docker layers
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ github.sha }}
@@ -31,23 +31,20 @@ jobs:
             ${{ runner.os }}-buildx-
             
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       
       - name: Build and push Docker image
-        id: docker_build
-        run: |
-          for i in 1 2 3; do
-            if docker compose -f docker-compose.build.yml build && \
-               docker compose -f docker-compose.build.yml push; then
-              exit 0
-            fi
-            echo "Retry $i/3..."
-            sleep 10
-          done
-          exit 1
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: leonardomeireles55/quality-lab-pro-back-end:latest
+          cache-from: type=registry,ref=leonardomeireles55/quality-lab-pro-back-end:latest
+          cache-to: type=inline,mode=min
 
   deploy:
     runs-on: [ self-hosted, linux, x64, backend ]
@@ -107,21 +104,9 @@ jobs:
           echo "Health check failed after $max_attempts attempts"
           exit 1
 
-  cleanup:
-    runs-on: [ self-hosted, linux, x64, backend ]
-    needs: health-check
-    if: always()
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Running cleanup script
-        run: |
-          chmod +x ./.github/scripts/cleanup_system.sh
-          ./.github/scripts/cleanup_system.sh
-
   notify:
     runs-on: [ self-hosted, linux, x64, backend ]
-    needs: [deploy, health-check, cleanup]
+    needs: [deploy, health-check, health-check]
     if: always()
 
     steps:
