--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,6 +13,11 @@ logging.level.leonardo=INFO
 spring.mail.properties.mail.debug=true
 
 # ===============================
+springfox.documentation.enabled=false
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
+
+# ===============================
 # = MONITORING
 # ===============================
 management.endpoints.web.exposure.include=health
