feat: introduce new DTOs for analytics calculations and update service methods and new tests
feat: add new DTOs for date range parameters and update analytics controllers to use them

refactor: update endpoint paths for analytics controllers and remove unused DTOs

chore: restructure Docker setup by adding new Dockerfiles and removing obsolete configurations

feat: add Dockerfile for test environment and update development Dockerfile for improved command execution

chore: update restart policies for MariaDB services in docker-compose.yml

improvements: remove obsolete DTOs and enhance validations e documantation.

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -51,7 +51,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: Dockerfile
+          file: ./.docker/Dockerfile.prod
           push: true
           tags: leonardomeireles55/quality-lab-pro-back-end:latest
           cache-from: type=registry,ref=leonardomeireles55/quality-lab-pro-back-end:latest
@@ -85,7 +85,7 @@ jobs:
           EMAIL_TO_SEND_LIST: ${{ secrets.EMAIL_TO_SEND_LIST }}
         run: |
           for i in 1 2 3; do
-            if docker compose pull && docker compose up -d; then
+            if docker compose pull && docker compose --profile prod up -d; then
               exit 0
             fi
             echo "Retry $i/3..."
