--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,16 +4,13 @@
 spring.main.banner-mode=off
 spring.main.lazy-initialization=true
 server.compression.enabled=false
-server.error.include-stacktrace=never
 
 # ===============================
 # = LOGGING CONFIGURATION
 # ===============================
 logging.level.leonardo=INFO
-spring.mail.properties.mail.debug=true
 
 # ===============================
-springfox.documentation.enabled=false
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
 
@@ -23,7 +20,6 @@ springdoc.swagger-ui.enabled=false
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=never
 management.health.ssl.enabled=false
-management.health.email.enabled=false
 
 # ===============================
 # = DATABASE CONFIGURATION
@@ -34,20 +30,11 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+spring.data.jpa.repositories.bootstrap-mode=lazy
 
 # ===============================
-# = EMAIL CONFIGURATION
+# = PERFORMANCE OPTIMIZATION
 # ===============================
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-email.to.send.list=${EMAIL_TO_SEND_LIST}
-
-# ===============================
-# = SECURITY CONFIGURATION
-# ===============================
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
-api.security.issuer=${API_SECURITY_ISSUER}
+# Cache Configuration
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=60s
