--- a/.docker/Dockerfile.prod
+++ b/.docker/Dockerfile.prod
@@ -17,4 +17,6 @@ COPY --from=build /app/target/QualityLabPro-0.8.jar ./app.jar
 ENV SPRING_PROFILES_ACTIVE=prod \
     SERVER_PORT=8080
 
+CMD [ "java", "-jar", "-Dspring.profiles.active=prod", "app.jar" ]
+
 EXPOSE ${SERVER_PORT}
