--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <artifactId>spring-context-support</artifactId>
             <version>6.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
