--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,33 @@
 # ===============================
+# = SERVER CONFIGURATION
+# ===============================
+server.error.include-stacktrace=always
+server.tomcat.accept-count=3
+server.tomcat.max-connections=3
+server.tomcat.threads.min-spare=1
+
+# ===============================
+# = SPRING BOOT CONFIGURATION
+# ===============================
+spring.main.lazy-initialization=true
+spring.jmx.enabled=false
+spring.main.banner-mode=off
+spring.data.jpa.repositories.bootstrap-mode=lazy
+
+# ===============================
 # = DATABASE CONFIGURATION
 # ===============================
-spring.jpa.database=h2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-
-# H2 Specific Configuration
-spring.datasource.url=jdbc:h2:mem:lab_api_alpha
-DATABASE_TO_UPPER=false
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
+spring.flyway.clean-disabled=false
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# = PERFORMANCE OPTIMIZATION
+# ===============================
+# Cache Configuration
+spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
