--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,30 +1,22 @@
 # ===============================
 # = SERVER CONFIGURATION
 # ===============================
-server.port=8080
-server.error.include-stacktrace=never
+server.error.include-stacktrace=always
 server.tomcat.accept-count=3
 server.tomcat.max-connections=3
-server.tomcat.max-threads=3
 server.tomcat.threads.min-spare=1
 
 # ===============================
-# = LOGGING CONFIGURATION
+# = SPRING BOOT CONFIGURATION
 # ===============================
-logging.level.leonardo=TRACE
-
-# ===============================
-# = MANAGEMENT CONFIGURATION
-# ===============================
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+spring.main.lazy-initialization=true
+spring.jmx.enabled=false
+spring.main.banner-mode=off
+spring.data.jpa.repositories.bootstrap-mode=lazy
 
 # ===============================
 # = DATABASE CONFIGURATION
 # ===============================
-spring.main.lazy-initialization=true
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=root
 spring.datasource.password=root
 spring.flyway.clean-disabled=false
@@ -32,21 +24,10 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
 # ===============================
-# = EMAIL CONFIGURATION
+# = PERFORMANCE OPTIMIZATION
 # ===============================
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-email.to.send.list=${EMAIL_TO_SEND_LIST}
-
-# ===============================
-# = SECURITY CONFIGURATION
-# ===============================
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
-api.security.issuer=${API_SECURITY_ISSUER}
+# Cache Configuration
+spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
