--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,14 +1,3 @@
-# ===============================
-# = SERVER CONFIGURATION
-# ===============================
-server.port=8080
-server.error.include-stacktrace=never
-spring.cache.type=caffeine
-spring.cache.caffeine.spec=maximumSize=500, expireAfterWrite=5m
-
-# ===============================
-# = DATABASE CONFIGURATION
-# ===============================
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/lab_api_test
 spring.datasource.username=root
@@ -33,5 +22,5 @@ email.to.send.list=your-email@example.com,your2-email@example.com
 # ===============================
 # = SECURITY CONFIGURATION
 # ===============================
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET:2491}
-api.security.issuer=${API_SECURITY_ISSUER:lab-api}
+api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
+api.security.issuer=${API_SECURITY_ISSUER}
