--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,26 +2,22 @@
 # = SERVER CONFIGURATION
 # ===============================
 server.port=${SERVER_LOCAL_PORT:8080}
-server.error.include-stacktrace=never
+server.error.include-stacktrace=always
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
-spring.output.ansi.enabled=detect
 spring.threads.virtual.enabled=true
-spring.cache.type=caffeine
-spring.cache.caffeine.spec=maximumSize=500, expireAfterWrite=5m
 
 # ===============================
 # = LOGGING CONFIGURATION
 # ===============================
 logging.level.leonardo=DEBUG
+spring.output.ansi.enabled=ALWAYS
 logging.file.name=logging_file.log
 
 # ===============================
-# = MONITORING
+# = MANAGEMENT CONFIGURATION
 # ===============================
-management.endpoints.web.exposure.include=health
-management.endpoint.health.show-details=never
-management.health.ssl.enabled=false
-management.health.email.enabled=false
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 
 # ===============================
 # = DATABASE CONFIGURATION
@@ -33,13 +29,8 @@ spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
-# Database Connection Pool
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.idle-timeout=300000
-
 # Default Pagination Settings
-spring.data.web.pageable.default-page-size=40
+spring.data.web.pageable.default-page-size=100
 spring.data.web.pageable.page-parameter=page
 spring.data.web.pageable.size-parameter=size
 
@@ -59,3 +50,22 @@ email.to.send.list=${EMAIL_TO_SEND_LIST}
 # ===============================
 api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
 api.security.issuer=${API_SECURITY_ISSUER}
+
+# ===============================
+# = PERFORMANCE OPTIMIZATION
+# ===============================
+# Cache Configuration
+spring.cache.type=caffeine
+
+# Hikari Connection Pool
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=300000
+
+# Hibernate Performance
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.jdbc.fetch_size=1500
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
+spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch=true
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
