refactor: rename services in docker-compose.yml for clarity and consistency

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 user nginx;
-worker_processes auto;  
-worker_rlimit_nofile 20480; 
+worker_processes auto;
+worker_rlimit_nofile 20480;
 
 events {
-    worker_connections 1024; 
+    worker_connections 1024;
     multi_accept on;
     use epoll;
 }
@@ -12,10 +12,10 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    
+
     keepalive_timeout 30;
     keepalive_requests 50;
-    
+
     client_header_buffer_size 4k;
     client_body_buffer_size 8m;
     large_client_header_buffers 2 4k;
@@ -29,9 +29,9 @@ http {
     gzip on;
     gzip_vary on;
     gzip_proxied any;
-    gzip_comp_level 5;  
-    gzip_min_length 512;  
-    gzip_types 
+    gzip_comp_level 5;
+    gzip_min_length 512;
+    gzip_types
         text/plain
         text/css
         application/json
@@ -41,16 +41,16 @@ http {
         text/javascript
         image/svg+xml;
 
-    upstream quality-lab-pro {
+    upstream back-end {
         least_conn;
-        server quality-lab-pro:8080;
-        keepalive 16;  
+        server quality-lab-pro-back-end:8080;
+        keepalive 16;
     }
 
-    upstream quality-lab-pro-frontend {
+    upstream front-end {
         least_conn;
         server quality-lab-pro-front-end:3000;
-        keepalive 16; 
+        keepalive 16;
     }
 
     ssl_session_cache shared:SSL:5m;
@@ -81,7 +81,7 @@ http {
        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
        location /backend/ {
-           proxy_pass http://quality-lab-pro/;
+           proxy_pass http://back-end/;
            proxy_http_version 1.1;
            proxy_set_header Connection "";
            proxy_set_header Host $host;
@@ -93,7 +93,7 @@ http {
        }
 
        location / {
-           proxy_pass http://quality-lab-pro-frontend;
+           proxy_pass http://front-end;
            proxy_http_version 1.1;
            proxy_set_header Host $host;
            proxy_set_header X-Real-IP $remote_addr;
