feat: add rate limiting for API and frontend requests in nginx configuration

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,6 +66,9 @@ http {
     access_log /var/log/nginx/quality-lab-pro-access.log combined buffer=16k;
     error_log /var/log/nginx/quality-lab-pro-error.log warn;
 
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=frontend_limit:10m rate=30r/s;
+
     server {
         listen 443 ssl;
         server_name lab-spec.systems www.lab-spec.systems labgraph.lab-spec.systems www.labgraph.lab-spec.systems;
@@ -81,6 +84,9 @@ http {
        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
        location /backend/ {
+           limit_req zone=api_limit burst=20 nodelay;
+           limit_req_status 429;
+
            proxy_pass http://back-end/;
            proxy_http_version 1.1;
            proxy_set_header Connection "";
@@ -93,6 +99,9 @@ http {
        }
 
        location / {
+           limit_req zone=frontend_limit burst=50 nodelay;
+           limit_req_status 429;
+
            proxy_pass http://front-end;
            proxy_http_version 1.1;
            proxy_set_header Host $host;
