feat: enhance analytics and user associations with validation tracking
- Add user associations and timestamps to Analytic entity
- Implement validated_by relationship between Analytics and Users
- Update generic_analytics table structure
- Improve User entity and authentication service
- Add test database configuration
- Update Docker and application settings for production

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,6 +11,7 @@ server.compression.enabled=false
 logging.level.leonardo=INFO
 
 # ===============================
+spring.profiles.active=prod
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
 
