--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -22,5 +22,5 @@ email.to.send.list=your-email@example.com,your2-email@example.com
 # ===============================
 # = SECURITY CONFIGURATION
 # ===============================
-api.security.token.secret=${API_SECURITY_TOKEN_SECRET}
-api.security.issuer=${API_SECURITY_ISSUER}
+api.security.token.secret=test-secret-key-12345678901234567890
+api.security.issuer=test-issuer
