--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -8,12 +8,6 @@ on:
       - 'README*'
       - 'LICENSE'
       - '.gitignore'
-      - '.env.example'
-      - 'docs/**'
-      - 'docker-compose.dev.yml'
-      - 'docker-compose.db.yml'
-      - 'docker-compose.local.yml'
-      - 'docker/**/docker-compose*.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -66,7 +60,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Deploy
+      - name: Deploy  
         env:
           DB_DATABASE: ${{ secrets.DB_DATABASE }}
           DB_DATABASE_TEST: ${{ secrets.DB_DATABASE_TEST }}
@@ -84,14 +78,8 @@ jobs:
           SPRING_MAIL_PASSWORD: ${{ secrets.SPRING_MAIL_PASSWORD }}
           EMAIL_TO_SEND_LIST: ${{ secrets.EMAIL_TO_SEND_LIST }}
         run: |
-          for i in 1 2 3; do
-            if docker compose pull && docker compose --profile prod up -d; then
-              exit 0
-            fi
-            echo "Retry $i/3..."
-            sleep 10
-          done
-          exit 1
+          docker compose pull
+          docker compose --profile prod up -d
 
   health-check:
     runs-on: [ self-hosted, linux, x64, backend ]
