bugfix: update method parameters for clarity and improve error logging in analytics service

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,10 +9,10 @@ server.tomcat.threads.min-spare=1
 # ===============================
 # = SPRING BOOT CONFIGURATION
 # ===============================
-spring.main.lazy-initialization=false
+spring.main.lazy-initialization=true
 spring.jmx.enabled=false
 spring.main.banner-mode=off
-spring.data.jpa.repositories.bootstrap-mode=lazy
+spring.data.jpa.repositories.bootstrap-mode=default
 
 # ===============================
 # = DATABASE CONFIGURATION
