--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>6.2.2</version>
+            
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -154,6 +154,13 @@
     
 
         <dependencies>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>6.2.3</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>com.google.errorprone</groupId>
