refactor: implement SignInUserDTO for user authentication and update UsersController to use new DTO refactor: update application properties for logging configuration and remove deprecated settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,7 @@
 # = SERVER CONFIGURATION
 # ===============================
 server.port=${SERVER_LOCAL_PORT:8080}
-server.error.include-stacktrace=never
 spring.threads.virtual.enabled=true
-spring.web.resources.add-mappings=false
 spring.config.name=lab-graph-api
 
 # ===============================
@@ -12,8 +10,9 @@ spring.config.name=lab-graph-api
 # ===============================
 # Set root level to WARN
 logging.level.root=info
-# Set application specific package to WARN
-logging.level.leonardo=info
+logging.level.leonardo=off
+logging.level.org.springframework=warn
+logging.level.org.hibernate=off
 spring.output.ansi.enabled=always
 logging.file.name=logs/lab-graph-api.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level - %msg%n
