refactor: apply DRY and KISS, add new tests

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,15 +1,15 @@
 # ===============================
 # = LOGGING CONFIGURATION
 # ===============================
-spring.output.ansi.enabled=never
+spring.output.ansi.enabled=always
+logging.level.org.springframework=debug
+logging.level.root=debug
 logging.file.name=logs/lab-graph-api-test.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level - %msg%n
 
 # ===============================
 # = SPRING BOOT CONFIGURATION
 # ===============================
-spring.main.lazy-initialization=true
-spring.jmx.enabled=false
 spring.main.banner-mode=off
 spring.data.jpa.repositories.bootstrap-mode=lazy
 
