--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,12 @@ services:
       resources:
         limits:
           memory: 128M
+    healthcheck:
+      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
+      start_period: 5s
+      interval: 5s
+      timeout: 5s
+      retries: 3
 
   app-prod:
     container_name: quality-lab-pro-back-end
@@ -44,10 +50,13 @@ services:
       - quality-net
     profiles:
       - prod
+    depends_on:
+      mariadb-dev:
+        condition: service_healthy
     deploy:
       resources:
         limits:
-          memory: 512M
+          memory: 384M
 
   nginx:
     restart: always
@@ -66,6 +75,10 @@ services:
       - app-prod
     profiles:
       - prod
+    deploy:
+      resources:
+        limits:
+          memory: 64M
 
   #---------------------
   # Development services
@@ -89,7 +102,13 @@ services:
     deploy:
       resources:
         limits:
-          memory: 50M
+          memory: 128M
+    healthcheck:
+      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
+      start_period: 5s
+      interval: 5s
+      timeout: 5s
+      retries: 3
 
   app-dev:
     container_name: quality-lab-pro-back-end-dev
@@ -117,7 +136,8 @@ services:
     profiles:
       - dev
     depends_on:
-      - mariadb-dev
+      mariadb-dev:
+        condition: service_healthy
     volumes:
       - ./:/usr/src/app
       - ~/.m2:/root/.m2
@@ -189,6 +209,7 @@ services:
     environment:
       MARIADB_DATABASE: ${DB_DATABASE}
       MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MARIADB_AUTO_UPGRADE: "true"
     ports:
       - ${DB_DOCKER_PORT}:${DB_LOCAL_PORT}
     volumes:
@@ -199,7 +220,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 50M
+          memory: 128M
 
 
 #----------------------------------------------
@@ -213,10 +234,6 @@ networks:
 
   quality-net-dev:
     name: quality-net-dev
-    external: true
-    driver: bridge
-
-
 #----------------------------------------------
 # Volumes
 volumes:
