fix: update service dependency from mariadb-dev to mariadb in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     profiles:
       - prod
     depends_on:
-      mariadb-dev:
+      mariadb:
         condition: service_healthy
     deploy:
       resources:
