refactor: update application properties for logging levels and lazy initialization; enhance Analytic and AnalyticsDTO to include validator username

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.config.name=lab-graph-api
 # ===============================
 # Set root level to WARN
 logging.level.root=info
-logging.level.leonardo=off
-logging.level.org.springframework=warn
-logging.level.org.hibernate=off
+logging.level.leonardo=info
+logging.level.org.springframework=info
+logging.level.org.hibernate=info
 spring.output.ansi.enabled=always
 logging.file.name=logs/lab-graph-api.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level - %msg%n
