bugfix: update threshold analytics rules to include additional values; change logging level to DEBUG in production properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ server.compression.enabled=false
 # ===============================
 # = LOGGING CONFIGURATION
 # ===============================
-logging.level.leonardo=INFO
+logging.level.leonardo=DEBUG
 
 # ===============================
 springdoc.api-docs.enabled=false
