--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>leonardo.labutilities</groupId>
     <artifactId>QualityLabPro</artifactId>
-    <version>0.8</version>
+    <version>1.0</version>
     <name>QualityLabPro</name>
     <description>Tool to assist in internal quality control of the clinical analysis laboratory.</description>
     <properties>
-        <java.version>21</java.version>
+        <java.version>23</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -119,7 +120,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            
+
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -142,8 +143,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>23
+                    </source>
+                    <target>23</target>
                     <parameters>true</parameters>
                 </configuration>
             </plugin>
@@ -152,7 +154,7 @@
 
 
     <dependencyManagement>
-    
+
 
         <dependencies>
 
@@ -176,9 +178,6 @@
                 <version>3.48.4</version>
             </dependency>
 
-        
-
-            
 
         </dependencies>
 
