fix: remove unnecessary sudo from .git permissions command in CI workflow

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -23,8 +23,8 @@ jobs:
 
     steps:
       - name: Fix .git permissions
-        run: sudo chown -R "$(id -u):$(id -g)" .git
-        
+        run: chown -R "$(id -u):$(id -g)" .git
+
       - uses: actions/checkout@v4
       
       - name: Set up Docker Buildx
