fix: update permissions fix step to target logs and target directories

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -22,8 +22,9 @@ jobs:
     timeout-minutes: 15
 
     steps:
-      - name: Fix .git permissions
-        run: chown -R "$(id -u):$(id -g)" .git
+      - name: Fix permissions
+        run: |
+          chown -R "$(id -u):$(id -g)" logs/ target/
 
       - uses: actions/checkout@v4
       
