--- a/.docker/Dockerfile.test
+++ b/.docker/Dockerfile.test
@@ -1,14 +1,16 @@
 FROM eclipse-temurin:21-jdk-alpine
 
-# Install maven and create non-root user
 RUN apk add --no-cache maven
 
-# Create non-root user
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 
-USER appuser
+USER root  # Temporarily use root to set the permissions correctly
 
 WORKDIR /usr/src/app
+
+RUN chown -R appuser:appgroup /usr/src/app
+
+USER appuser
 
 ENV SERVER_PORT=8080 \
     SPRING_PROFILES_ACTIVE=test
