--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,8 +21,8 @@ spring.datasource.password=root
 spring.flyway.clean-disabled=false
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # ===============================
