--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -20,7 +20,7 @@ spring.datasource.password=root
 spring.flyway.clean-disabled=false
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
