--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -22,7 +22,7 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 # ===============================
 # = PERFORMANCE OPTIMIZATION
