--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -16,7 +16,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/lab_api_test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.flyway.clean-disabled=false
